// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for Bookmark renders bookmark not selected correctly 1`] = `
<label
  className="MuiFormControlLabel-root-3"
  style={
    Object {
      "paddingLeft": 10,
    }
  }
>
  <span
    className="MuiSwitch-root-9"
  >
    <span
      className="MuiButtonBase-root-28 MuiIconButton-root-22 MuiPrivateSwitchBase-root-18 MuiSwitch-switchBase-12 MuiSwitch-colorPrimary-14 Bookmark-colorPrimary-2"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-27"
      >
        <span
          className="MuiSwitch-icon-10"
        />
        <input
          checked={false}
          className="MuiPrivateSwitchBase-input-21"
          disabled={false}
          onChange={[Function]}
          type="checkbox"
          value="bookmark"
        />
      </span>
      <span
        className="MuiTouchRipple-root-66"
      />
    </span>
    <span
      className="MuiSwitch-bar-17"
    />
  </span>
  <span
    className="MuiTypography-root-31 MuiTypography-body1-40 MuiFormControlLabel-label-8 Bookmark-label-1"
  >
    Bookmark
  </span>
</label>
`;

exports[`Tests for Bookmark renders bookmark selected correctly 1`] = `
<label
  className="MuiFormControlLabel-root-3"
  style={
    Object {
      "paddingLeft": 10,
    }
  }
>
  <span
    className="MuiSwitch-root-9"
  >
    <span
      className="MuiButtonBase-root-28 MuiIconButton-root-22 MuiPrivateSwitchBase-root-18 MuiSwitch-switchBase-12 MuiSwitch-colorPrimary-14 Bookmark-colorPrimary-2 MuiPrivateSwitchBase-checked-19 MuiSwitch-checked-13"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-27"
      >
        <span
          className="MuiSwitch-icon-10 MuiSwitch-iconChecked-11"
        />
        <input
          checked={true}
          className="MuiPrivateSwitchBase-input-21"
          disabled={false}
          onChange={[Function]}
          type="checkbox"
          value="bookmark"
        />
      </span>
      <span
        className="MuiTouchRipple-root-66"
      />
    </span>
    <span
      className="MuiSwitch-bar-17"
    />
  </span>
  <span
    className="MuiTypography-root-31 MuiTypography-body1-40 MuiFormControlLabel-label-8 Bookmark-label-1"
  >
    Bookmark
  </span>
</label>
`;
